added power support arch ppc64le on yml file.
Added power support for the travis.yml file with ppc64le. This is part of the Ubuntu distribution for ppc64le.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,10 @@ jobs:
           env: C_CXX11=OFF C_LUAV=5.1.5 C_LXX=src
         - compiler: clang
           env: C_CXX11=OFF C_LUAV=5.3.4 C_LXX=cxx C_EXTRA="-DLUABIND_CPLUSPLUS_LUA=ON"
-
+          # added power support arch ppc64le.
+        - compiler: clang
+          env: C_CXX11=OFF C_LUAV=5.1.5 C_LXX=src
+          arch: ppc64le
+        - compiler: clang
+          env: C_CXX11=OFF C_LUAV=5.3.4 C_LXX=cxx C_EXTRA="-DLUABIND_CPLUSPLUS_LUA=ON"
+          arch: ppc64le
